--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_1</item>
         <item name="colorPrimaryVariant">@color/green_2</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/white_bone</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
@@ -26,10 +26,12 @@
 
     <!--    CARD VIEW-->
     <style name="ElevatedCardView">
-        <item name="android:backgroundTint">@color/white</item>
         <item name="cardCornerRadius">8dp</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
-        <item name="background">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="BottomNavbarText">
+        <item name="fontFamily">@font/poppins_semibold</item>
     </style>
 </resources>
