--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,30 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <androidx.cardview.widget.CardView
+    <ImageButton
         android:id="@+id/info_dialog"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="20dp"
-        app:cardCornerRadius="100dp"
+        android:src="@drawable/ic_question"
+        app:tint="@color/white"
+        android:background="@drawable/bg_button_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:backgroundTint="@color/black_transparent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_gravity="center">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_question"
-                app:tint="@color/white"/>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        android:backgroundTint="@color/black_transparent"/>
 
     <ImageView
         android:id="@+id/frame_camera"
@@ -68,7 +56,8 @@
         app:cardCornerRadius="80dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_camera">
+        app:layout_constraintTop_toBottomOf="@+id/frame_camera"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -82,8 +71,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_image"
-                android:tint="@color/white"
-                app:backgroundTint="@color/gray"
+                app:tint="@color/white"
+                app:backgroundTint="@color/green_2"
                 app:fabCustomSize="55dp"
                 app:maxImageSize="20dp" />
 
@@ -103,7 +92,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_switch"
-                app:backgroundTint="@color/gray"
+                app:tint="@color/white"
+                app:backgroundTint="@color/green_2"
                 app:fabCustomSize="55dp"
                 app:maxImageSize="20dp" />
         </LinearLayout>
