--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_bone"
-    tools:context=".ui.DashboardFragment">
+    tools:context=".ui.dashboard.DashboardFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -60,8 +59,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hello"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"/>
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/user_iplant"
@@ -70,8 +68,7 @@
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/poppins_semibold"
                     android:text="@string/user"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"/>
+                    android:textSize="20sp" />
             </LinearLayout>
 
             <TextView
@@ -80,8 +77,7 @@
                 android:layout_marginTop="-6dp"
                 android:text="@string/desc_hello2"
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="28sp"
-                android:textColor="@color/black"/>
+                android:textSize="28sp" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -244,11 +240,16 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_article"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                     tools:listitem="@layout/item_article" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"/>
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
