--- a/app/src/main/res/layout/item_article.xml
+++ b/app/src/main/res/layout/item_article.xml
@@ -8,7 +8,6 @@
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="4dp"
-    android:background="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true">
 
@@ -34,6 +33,9 @@
             android:layout_marginTop="8dp"
             android:text="@string/placeholder_title"
             app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="20sp"
+            android:maxLines="1"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_post" />
 
@@ -44,7 +46,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="4dp"
             android:ellipsize="end"
-            android:maxLines="3"
+            android:maxLines="2"
             android:text="@string/placeholder_desc"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
