--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorOnPrimary"
     tools:context=".ui.ResultActivity">
 
     <LinearLayout
@@ -40,10 +41,11 @@
 
     <Button
         android:id="@+id/btn_predict"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        style="@style/Button"
         android:layout_marginTop="32dp"
-        android:text="Predict"
+        android:text="@string/predict"
         app:layout_constraintEnd_toEndOf="@+id/previewImageView"
         app:layout_constraintStart_toStartOf="@+id/previewImageView"
         app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
@@ -52,8 +54,10 @@
         android:id="@+id/tv_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Result"
+        android:layout_marginTop="24dp"
+        android:text="@string/result"
         android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/previewImageView"
         app:layout_constraintStart_toStartOf="@+id/previewImageView"
         app:layout_constraintTop_toBottomOf="@+id/btn_predict" />
 
