--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -35,6 +35,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:onClick="true"
+                android:contentDescription="@string/user"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="OnClick" />
