--- a/app/src/main/res/drawable/bg_button_disable.xml
+++ b/app/src/main/res/drawable/bg_button_disable.xml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape>
-            <solid android:color="@color/green_disable" />
-            <corners android:radius="23dp" />
-            <padding android:left="4dp" android:right="4dp" />
-        </shape>
-    </item>
     <item>
         <shape>
-            <solid android:color="@color/green_disable" />
-            <corners android:radius="25dp" />
-            <padding android:left="4dp" android:right="4dp" />
+            <solid android:color="@color/white_bone" />
+            <corners android:topRightRadius="23dp" android:topLeftRadius="23dp" />
         </shape>
     </item>
 </selector>
