--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -26,24 +26,26 @@
 
     <ImageView
         android:id="@+id/frame_camera"
-        android:layout_width="320dp"
-        android:layout_height="550dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_margin="24dp"
         android:scaleType="fitXY"
         android:src="@drawable/subtract"
+        app:layout_constraintBottom_toTopOf="@+id/tv_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info_dialog" />
 
     <TextView
+        android:id="@+id/tv_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/start_capture_now"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_camera" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -52,12 +54,13 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="70dp"
+        android:layout_marginBottom="32dp"
         app:cardBackgroundColor="@color/black_transparent"
         app:cardCornerRadius="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_camera"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/frame_camera">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,10 +74,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_image"
-                app:tint="@color/white"
                 app:backgroundTint="@color/green_2"
                 app:fabCustomSize="55dp"
-                app:maxImageSize="20dp" />
+                app:maxImageSize="20dp"
+                app:tint="@color/white" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/btn_capture"
@@ -92,10 +95,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_switch"
-                app:tint="@color/white"
                 app:backgroundTint="@color/green_2"
                 app:fabCustomSize="55dp"
-                app:maxImageSize="20dp" />
+                app:maxImageSize="20dp"
+                app:tint="@color/white" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
