--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -76,9 +76,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="-6dp"
-                android:text="@string/desc_hello2"
                 android:fontFamily="@font/poppins_bold"
-                android:textSize="28sp" />
+                android:text="@string/desc_hello2"
+                android:textSize="28sp"
+                android:maxLines="2"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -221,7 +222,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="@string/text_article"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -235,18 +235,41 @@
                         android:text="@string/see_article"
                         android:textColor="@color/green_2"
                         android:textSize="11sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_article"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-                    tools:listitem="@layout/item_article" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_article"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2"
+                        tools:listitem="@layout/item_article" />
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:id="@+id/shimmer_article"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <include layout="@layout/item_article_shimmer" />
+
+                            <include layout="@layout/item_article_shimmer" />
+
+                            <include layout="@layout/item_article_shimmer" />
+
+                            <include layout="@layout/item_article_shimmer" />
+
+                            <include layout="@layout/item_article_shimmer" />
+
+                        </LinearLayout>
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
