--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="transparent_green">#4FACECA1</color>
     <color name="gray">#9A9A9A</color>
     <color name="gray2">#F4F4F4</color>
+    <color name="gray3">#D9D9D9</color>
     <color name="black_transparent">#51000000</color>
 </resources>
